--- a/01python_basic.ipynb
+++ b/01python_basic.ipynb
@@ -2,6 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c30e460c-628d-4d95-bc11-5bc840b93e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b72b189-e38c-4251-824b-182ff20f3d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " C 드라이브의 볼륨에는 이름이 없습니다.\n",
+      " 볼륨 일련 번호: D42D-DE20\n",
+      "\n",
+      " C:\\python 디렉터리\n",
+      "\n",
+      "2023-02-27  오후 06:33    <DIR>          .\n",
+      "2023-02-27  오후 06:33    <DIR>          ..\n",
+      "2023-02-13  오전 11:12                20 .gitignore\n",
+      "2023-02-27  오후 12:32    <DIR>          .ipynb_checkpoints\n",
+      "2023-02-13  오후 02:32             2,200 01python.ipynb\n",
+      "2023-02-14  오전 09:38             8,441 02python_basic.ipynb\n",
+      "2023-02-14  오후 02:36            14,600 03python_str,list,tuple.ipynb\n",
+      "2023-02-15  오전 09:23             7,021 04python_function.ipynb\n",
+      "2023-02-15  오전 09:33             9,330 05python_input.ipynb\n",
+      "2023-02-15  오전 11:08             7,853 06python_print.ipynb\n",
+      "2023-02-16  오전 09:22            15,573 07python_if.ipynb\n",
+      "2023-02-16  오후 05:31            18,453 08python_for.ipynb\n",
+      "2023-02-20  오후 06:48             8,833 09python_while.ipynb\n",
+      "2023-02-20  오후 07:06             6,153 10python_break.ipynb\n",
+      "2023-02-20  오후 07:36            15,403 11python_dictionary type.ipynb\n",
+      "2023-02-22  오전 12:51            27,913 12python_list.ipynb\n",
+      "2023-02-21  오전 11:01             9,460 13python_set.ipynb\n",
+      "2023-02-22  오전 12:14            24,969 14python_function.ipynb\n",
+      "2023-02-22  오후 12:41            10,537 15python_class.ipynb\n",
+      "2023-02-27  오후 12:23             8,576 16python_try,except\n",
+      "2023-02-23  오전 10:14             4,925 sql_practice1.sql\n",
+      "2023-02-23  오후 05:16             6,902 sql_practice2.sql\n",
+      "2023-02-27  오전 11:21             4,244 sql_python.ipynb\n",
+      "2023-02-23  오후 05:47               307 sql_python.sql\n",
+      "2023-02-27  오후 06:33             8,978 Untitled.ipynb\n",
+      "              22개 파일             220,691 바이트\n",
+      "               3개 디렉터리  173,181,087,744 바이트 남음\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bc112766-342a-4efe-a955-040af4fcc0ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "3561d163-923f-4081-a908-773c761838d4",
    "metadata": {},
