--- a/04python_input,print.ipynb
+++ b/04python_input,print.ipynb
@@ -335,8 +335,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70dd024f-e084-41c9-9667-9d980e7c924e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value 1 1.1 [1, 2, 3]\n",
+      "value, 1, 1.1, [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print()함수는 여러 인자 값을 한번에 출력 가능\n",
+    "#기본 구분기호는 공백\n",
+    "#sep=''이 defalt값\n",
+    "\n",
+    "#구분 기호를 다른 문자로 변경 \n",
+    "#sep='구분기호' / 맨 마지막에 작성\n",
+    "\n",
+    "print('value',1,1.1,[1,2,3])\n",
+    "print('value',1,1.1,[1,2,3],sep=', ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9015c1af-e63c-4c9b-9c9e-9cf991a869a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "줄이 바뀌지 않습니다.그 이유는 end='\\n'과 같이 기본 설정된 값을 빈 스트링으로 변경했기 때문입니다.\n",
+      "sep, end는 맨 뒤에 써야하며 둘 간 순서는 상관없습니다.어떻게 사용하는지\n",
+      "이해가 되시나요?"
+     ]
+    }
+   ],
+   "source": [
+    "#print()함수 마다 줄 바꿈 기본\n",
+    "#end='\\n'이 defalt값\n",
+    "#end='문자열'으로 변경 가능\n",
+    "\n",
+    "print('줄이 바뀌지 않습니다.',end='')\n",
+    "print('그 이유는 end=\\'\\\\n\\'과 같이 기본 설정된 값을 빈 스트링으로 변경했기 때문입니다.')\n",
+    "print('sep','end는 맨 뒤에 써야하며 둘 간 순서는 상관없습니다.',sep=', ',end='')\n",
+    "print('어떻게 사용하는지','이해가 되시나요',sep='\\n',end='?')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "893298c2-b06a-4da0-8a72-65263b0ef7f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021/02/03 18:33:23\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = '2021'\n",
+    "month = '02'\n",
+    "day = '03'\n",
+    "hour = '18'\n",
+    "minute = '33'\n",
+    "second = '23'\n",
+    "\n",
+    "print(year,month,day,sep='/',end = ' ')\n",
+    "print(hour,minute,second,sep=':')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a49447a8-ef57-48dc-b0ab-ad0f01fe4845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "사과와 귤을 몇개 드릴까요? 1,5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 가격은 2000원입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,g = map(int,input('사과와 귤을 몇개 드릴까요?').split(','))\n",
+    "print('총 가격은 ',1000*a + 200*g,'원입니다',sep=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "166ee2ea-1c77-4a68-92e0-b3e11c2ca529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20\n",
+      "\n",
+      "오늘의 날짜를 알려드립니다!\n",
+      "2023년 2월 27일입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#format()메서드\n",
+    "#\"{문자열} {}\".format(값1,값2)\n",
+    "#문자열과 format() 인수 개수가 동일\n",
+    "\n",
+    "print('{} {}'.format(10,20))\n",
+    "\n",
+    "#문자열에 삼중 따옴표 사용 가능\n",
+    "import time\n",
+    "\n",
+    "today = \"\"\"오늘의 날짜를 알려드립니다!\n",
+    "{}년 {}월 {}일입니다.\\\n",
+    "\"\"\".format(time.localtime().tm_year,\n",
+    "           time.localtime().tm_mon,\n",
+    "           time.localtime().tm_mday)\n",
+    "\n",
+    "print('\\n',today,sep=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "246d6447-e598-4a0d-b860-181c36c24b0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "중괄호는 2개이고, 여기 인수는\n"
+     ]
+    }
+   ],
+   "source": [
+    "#중괄호 개수보다 format 메서드의 인수가 많으면\n",
+    "#초과되는 format 메서드의 인수는 버려짐\n",
+    "\n",
+    "some_str = \"중괄호는 2개이고, {} {}\".format(\"여기\",\"인수는\",\"3개 입니다.\")\n",
+    "print(some_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dda228b6-a045-4b54-8d87-7910e8bf31a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "Replacement index 3 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15852\\1136542040.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#결론 : 개수를 잘 맞춰서 쓰는게 중요\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msome_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"중괄호는 4개이고, {} {} {} {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"여기\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"인수는\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"3개 입니다.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msome_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: Replacement index 3 out of range for positional args tuple"
+     ]
+    }
+   ],
+   "source": [
+    "#중괄호 개수보다 format 메서드의 인수가 적으면\n",
+    "#IndexError 발생\n",
+    "#결론 : 개수를 잘 맞춰서 쓰는게 중요\n",
+    "\n",
+    "some_str = \"중괄호는 4개이고, {} {} {} {}\".format(\"여기\",\"인수는\",\"3개 입니다.\")\n",
+    "print(some_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8c71bc00-1799-45bd-91ff-9dfbdc78ef51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10 20\n",
+      "\n",
+      "오늘의 날짜를 알려드립니다!\n",
+      "2023년 2월 27일 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#문자열의 f-string\n",
+    "#문자열 앞에 f를 붙이고 {}안에 리터럴 값 혹은 변수 넣어서 사용\n",
+    "#.format() 메서드 보다 간편하고 직관적\n",
+    "\n",
+    "print(f\"{10}\")\n",
+    "print(f\"{10} {20}\")\n",
+    "\n",
+    "#삼중 따옴표 사용 가능\n",
+    "\n",
+    "import time\n",
+    "today = f\"\"\"\\n오늘의 날짜를 알려드립니다!\n",
+    "{time.localtime().tm_year}년 {time.localtime().tm_mon}월 {time.localtime().tm_mday}일 입니다.\"\"\"\n",
+    "\n",
+    "print(today)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c864be3c-bf54-41a5-8c31-5e905dbd3e10",
    "metadata": {},
    "outputs": [],
    "source": []
