--- a/sql_python.ipynb
+++ b/sql_python.ipynb
@@ -69,11 +69,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "28599886-d6c0-48f4-9190-e0439d1dc4f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7625597484738"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 + 3 ** 27 - 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1316a644-61fa-4453-9ff8-3f8c593b82a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 7 + 3 * 2 ** 7 - 256 \n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a6ecbac0-4a0b-42a5-9ad3-25168061cbdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023년\n",
+      "100\n",
+      "None\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='2023년'\n",
+    "b=100\n",
+    "c=None\n",
+    "d=1>2\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1eba599b-f432-4c60-b22e-7a04f489cac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zxvtrpnlj'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "letters[-1:-18:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "198fd32c-65d2-411b-b5de-2ebb9d9e8e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t t l\n"
+     ]
+    }
+   ],
+   "source": [
+    " = \"Don't want no riddle\"\n",
+    "print(x[4],x[9],x[18])"
+   ]
   }
  ],
  "metadata": {
