--- a/06python_for,while.ipynb
+++ b/06python_for,while.ipynb
@@ -750,8 +750,587 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0c8d34e-e08e-430a-aa7e-cb771281711a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n",
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while 반복문\n",
+    "#조건식 판별\n",
+    "#조건식이 True인 동안 while문의 바디(반복할 코드, 변화식)를 실행\n",
+    "#조건식이 False가 되면 while문 종료\n",
+    "\n",
+    "#만약 무한 루프에 갇히게 되면 ■ 버튼으로 일시정지 후 새로고침\n",
+    "#i += i 하면 i=0인데 0을 더하면 계속 0이라서 무한루프\n",
+    "\n",
+    "#총 100번 반복\n",
+    "i = 0                         #초기식\n",
+    "while i < 100:                #while 조건식\n",
+    "    print('Hello world!')     #반복할 코드\n",
+    "    i += 1                    #변화식(증감식)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b45a9dcc-e671-4ea5-97c8-4149affe626c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "반복할 횟수를 입력하세요: 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = int(input('반복할 횟수를 입력하세요:'))\n",
+    "\n",
+    "while count > 0:\n",
+    "    print('Hello world',count)\n",
+    "    count -= 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18bc7fb4-5f30-41ec-b34d-9a3c74e24298",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 \t4 \t6 \t8 \t10 \t12 \t14 \t16 \t18 \t20 \t22 \t24 \t26 \t28 \t30 \t32 \t34 \t36 \t38 \t40 \t42 \t44 \t46 \t48 \t50 \t52 \t54 \t56 \t58 \t60 \t62 \t64 \t66 \t68 \t70 \t72 \t74 \t76 \t78 \t80 \t82 \t84 \t86 \t88 \t90 \t92 \t94 \t96 \t98 \t100 \t"
+     ]
+    }
+   ],
+   "source": [
+    "num = 2\n",
+    "while num <= 100 :\n",
+    "    print(num,'\\t',end=\"\")\n",
+    "    num += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8398916f-88c4-4dac-8b4c-9cf3f9932c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "구구단을 알려드립니다. 숫자를 입력하세요 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9*1 = 9\n",
+      "9*2 = 18\n",
+      "9*3 = 27\n",
+      "9*4 = 36\n",
+      "9*5 = 45\n",
+      "9*6 = 54\n",
+      "9*7 = 63\n",
+      "9*8 = 72\n",
+      "9*9 = 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('구구단을 알려드립니다. 숫자를 입력하세요'))\n",
+    "num = 1\n",
+    "while num < 10:\n",
+    "    print(f\"{a}*{num} = {a*num}\")\n",
+    "    num += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a616c99f-91ca-46e4-a808-b4782ada7283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "100\n",
+      "77\n",
+      "97\n",
+      "100\n",
+      "77\n"
+     ]
+    }
+   ],
+   "source": [
+    "#시퀀스 객체의 인덱스 루프(loop)\n",
+    "\n",
+    "#for문\n",
+    "scores = (97,100,77)\n",
+    "\n",
+    "for _ in range(len(scores)):\n",
+    "    print(scores[_])\n",
+    "    \n",
+    "#while문\n",
+    "\n",
+    "#i는 인덱스를 순서대로 접근할 수 있도록 제어할 변수\n",
+    "#0~3까지 1씩 증가\n",
+    "#인덱싱을 할 때는 정확한 범위의 인덱스에 접근해야 한다!\n",
+    "\n",
+    "i=0\n",
+    "while i  < len(scores):\n",
+    "    print(scores[i])\n",
+    "    i += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "faa9ca01-5f9d-4184-8656-f79eca173829",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(1,11) :\n",
+    "    print(_,end=\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "810c08b5-5823-4ba9-bcf5-9a9da858f05a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 11 :\n",
+    "    print(i ,end=\" \")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "56ec2dc1-7bf3-4da0-b9e8-dadb7421f13f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_a = (70,60,55,75,95,90,80,80,85,100)\n",
+    "\n",
+    "i = 0\n",
+    "a = 0\n",
+    "while i < len(class_a) :\n",
+    "    a += class_a[i]\n",
+    "    i += 1\n",
+    "    \n",
+    "print(a/len(class_a))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1a3a2e6a-b291-49a1-b9dc-1201305b7965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_a = (70,60,55,75,95,90,80,80,85,100)\n",
+    "\n",
+    "i=0\n",
+    "total = 0\n",
+    "while i < len(class_a):\n",
+    "    total += class_a[i]\n",
+    "    i += 1\n",
+    "    \n",
+    "print(total/len(class_a))\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7e88718a-b366-4c05-88ba-9bc48a377970",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "#break문\n",
+    "#for,while문에서 해당 반복문을 완전히 빠져나감\n",
+    "#보통 반복문 안에서 특정 조건에 부합할 때 빠져나가기 위함 -> if랑 같이 쓰임\n",
+    "\n",
+    "#While문 - 무한 루프 활용\n",
+    "\n",
+    "i = 0\n",
+    "total = 0\n",
+    "while True :\n",
+    "    total += i\n",
+    "    i += 1\n",
+    "    if i > 100 :\n",
+    "        break\n",
+    "print(total)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eb153955-9243-470a-81ae-ecfb6a23b275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "q를 입력하면 종료 p\n",
+      "q를 입력하면 종료 q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "프로그램 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while문의 무한 루프 + input() \n",
+    "#원하는 값을 받을때까지 입력 받는 프로그램 구현\n",
+    "\n",
+    "while True :\n",
+    "    input_value = input('q를 입력하면 종료')\n",
+    "    if input_value == 'q' : break\n",
+    "print('프로그램 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "84e1eb01-b005-4940-aec6-16395162451f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 13 23 33 43 53 63 73 83 93 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while True :\n",
+    "    if i % 10 != 3 :\n",
+    "        i += 1\n",
+    "        continue\n",
+    "    if i > 100 :\n",
+    "        break\n",
+    "    \n",
+    "    print(i,end=' ')\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e3414451-30a4-4b44-9882-18b6f4d84d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\t3\t5\t7\t9\t11\t13\t15\t17\t19\t21\t23\t25\t27\t29\t31\t33\t35\t37\t39\t41\t43\t45\t47\t49\t51\t53\t55\t57\t59\t61\t63\t65\t67\t69\t71\t73\t75\t77\t79\t81\t83\t85\t87\t89\t91\t93\t95\t97\t99\t"
+     ]
+    }
+   ],
+   "source": [
+    "#continue\n",
+    "#for,while문의 제어흐름을 유지하고, continue가 실행된 반복 횟수의 코드 실행만 건너뜀\n",
+    "\n",
+    "#break - 해당 조건을 만족하면 아예 조건문을 빠져나옴\n",
+    "#continue - 해당 조건이 만족할 때만 실행하지 않고 건너뜀\n",
+    "\n",
+    "for i in range(100) :   # 0부터 99까지 증가하면서 100번 진행\n",
+    "    if i % 2 == 0 :     # i가 짝수일 때\n",
+    "        continue        # 아래 코드를 실행하지 않고 건너뜀\n",
+    "    print(i , end ='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e5677bb7-c01e-4b46-9756-2707aa71245d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작하는 정수 입력: 1\n",
+      "끝나는 정수 입력: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 5까지의 합은 15입니다.\n",
+      "1부터 5까지의 합은 15입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('시작하는 정수 입력:'))\n",
+    "b = int(input('끝나는 정수 입력:'))\n",
+    "\n",
+    "total = 0\n",
+    "for i in range(a,b+1):\n",
+    "    total += i\n",
+    "    \n",
+    "print(f'{a}부터 {b}까지의 합은 {total}입니다.')\n",
+    "\n",
+    "i= a\n",
+    "total = 0 \n",
+    "while i <= b :\n",
+    "    total += i\n",
+    "    i += 1\n",
+    "    \n",
+    "print(f'{a}부터 {b}까지의 합은 {total}입니다.')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2495e0c8-c059-4552-9335-921f40ad2466",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작하는 정수 입력: 1\n",
+      "끝나는 정수 입력: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 5까지의 합은 15 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = int(input('시작하는 정수 입력:'))\n",
+    "end = int(input('끝나는 정수 입력:'))\n",
+    "\n",
+    "total=0\n",
+    "for i in range(start, end+1) :\n",
+    "    total += i\n",
+    "print(f'{start}부터 {end}까지의 합은 {total} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6f83594a-8011-4003-99f1-a90aa70ef157",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "시작하는 정수 입력: 1\n",
+      "끝나는 정수 입력: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 5까지의 합은 15 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = int(input('시작하는 정수 입력:'))\n",
+    "end = int(input('끝나는 정수 입력:'))\n",
+    "\n",
+    "i=start\n",
+    "total = 0 \n",
+    "while i <= end :\n",
+    "    total += i\n",
+    "    i+=1\n",
+    "print(f'{start}부터 {end}까지의 합은 {total} 입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb351c4-f367-456e-a5bd-059b879d0ce0",
    "metadata": {},
    "outputs": [],
    "source": []
