--- a/12python_API.ipynb
+++ b/12python_API.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "cadceece-1cf5-4d26-bdc7-2bac879669bb",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
       "인코딩:utf-8\n",
       "콘텐츠 타입:application/json; charset=utf-8\n",
       "서버:GitHub.com\n",
-      "{'Server': 'GitHub.com', 'Date': 'Mon, 27 Feb 2023 06:25:08 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept, Accept-Encoding, Accept, X-Requested-With', 'ETag': 'W/\"60df2d3c5cc08384fcdfa1716b86c62e74668ea8fd8f06bb96ba10a4471d8ec7\"', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Link': '<https://api.github.com/repositories?since=369>; rel=\"next\", <https://api.github.com/repositories{?since}>; rel=\"first\"', 'x-github-api-version-selected': '2022-11-28', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Used, X-RateLimit-Resource, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, X-GitHub-SSO, X-GitHub-Request-Id, Deprecation, Sunset', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '0', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Encoding': 'gzip', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '31', 'X-RateLimit-Reset': '1677481638', 'X-RateLimit-Resource': 'core', 'X-RateLimit-Used': '29', 'Accept-Ranges': 'bytes', 'Transfer-Encoding': 'chunked', 'X-GitHub-Request-Id': 'C6A4:5E34:FD07:17D5D2:63FC4CC4'}\n",
+      "{'Server': 'GitHub.com', 'Date': 'Tue, 28 Feb 2023 00:45:52 GMT', 'Content-Type': 'application/json; charset=utf-8', 'Cache-Control': 'public, max-age=60, s-maxage=60', 'Vary': 'Accept, Accept-Encoding, Accept, X-Requested-With', 'ETag': 'W/\"60df2d3c5cc08384fcdfa1716b86c62e74668ea8fd8f06bb96ba10a4471d8ec7\"', 'X-GitHub-Media-Type': 'github.v3; format=json', 'Link': '<https://api.github.com/repositories?since=369>; rel=\"next\", <https://api.github.com/repositories{?since}>; rel=\"first\"', 'x-github-api-version-selected': '2022-11-28', 'Access-Control-Expose-Headers': 'ETag, Link, Location, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Used, X-RateLimit-Resource, X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval, X-GitHub-Media-Type, X-GitHub-SSO, X-GitHub-Request-Id, Deprecation, Sunset', 'Access-Control-Allow-Origin': '*', 'Strict-Transport-Security': 'max-age=31536000; includeSubdomains; preload', 'X-Frame-Options': 'deny', 'X-Content-Type-Options': 'nosniff', 'X-XSS-Protection': '0', 'Referrer-Policy': 'origin-when-cross-origin, strict-origin-when-cross-origin', 'Content-Security-Policy': \"default-src 'none'\", 'Content-Encoding': 'gzip', 'X-RateLimit-Limit': '60', 'X-RateLimit-Remaining': '5', 'X-RateLimit-Reset': '1677545787', 'X-RateLimit-Resource': 'core', 'X-RateLimit-Used': '55', 'Accept-Ranges': 'bytes', 'Transfer-Encoding': 'chunked', 'X-GitHub-Request-Id': 'C43A:7D0E:1F175:30871:63FD4EBF'}\n",
       "{\n",
       "  \"id\": 1,\n",
       "  \"node_id\": \"MDEwOlJlcG9zaXRvcnkx\",\n",
@@ -99,8 +99,9 @@
     "print(response.headers)\n",
     " \n",
     "#json 형태의 dictionary로 구조화\n",
+    "#API에서 받아온 데이터가 리스트거나 딕셔너리로 전달\n",
     "import json\n",
-    "print(json.dumps(response.json()[0], indent=2)[:200])"
+    "print(json.dumps(response.json()[0], indent=2)[:200])   # indent :들여쓰기 "
    ]
   },
   {
@@ -151,51 +152,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9a90d890-f7ca-4c6d-a2af-79cd487cdf27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "94e2db56-3692-4292-a79c-e0e47021215a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#json컨텐츠 딕셔너리로 변환\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "a2bde742-9e4d-4c2b-9013-2e712c9681c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "dict_keys(['id', 'node_id', 'name', 'full_name', 'private', 'owner', 'html_url', 'description', 'fork', 'url', 'forks_url', 'keys_url', 'collaborators_url', 'teams_url', 'hooks_url', 'issue_events_url', 'events_url', 'assignees_url', 'branches_url', 'tags_url', 'blobs_url', 'git_tags_url', 'git_refs_url', 'trees_url', 'statuses_url', 'languages_url', 'stargazers_url', 'contributors_url', 'subscribers_url', 'subscription_url', 'commits_url', 'git_commits_url', 'comments_url', 'issue_comment_url', 'contents_url', 'compare_url', 'merges_url', 'archive_url', 'downloads_url', 'issues_url', 'pulls_url', 'milestones_url', 'notifications_url', 'labels_url', 'releases_url', 'deployments_url'])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.json().keys()\n",
-    "len(response.json()['items'])"
+    "#json컨텐츠 딕셔너리로 변환\n",
+    "#[{}] -> 리스트 속에 딕셔너리로 존재\n",
+    "#.keys를 사용하려면 리스트 안에 있는 딕셔너리를 따로 꺼내서 \n",
+    "import json\n",
+    "response.json()[0].keys()  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f518a4-256d-42c5-8535-fcc3e1a56ecb",
+   "id": "94e2db56-3692-4292-a79c-e0e47021215a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9560\\42942232.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'items'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "len(response.json()['items'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "899db211-ea02-4c30-bba0-f6cacdbb3a48",
    "metadata": {},
    "outputs": [],
    "source": []
