--- a/14Numpy.ipynb
+++ b/14Numpy.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d5fab667-200e-4458-8b23-8a2325788300",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "id": "bf7e0ab2-a8a9-43f5-a4bc-fd1474d3863d",
    "metadata": {},
    "outputs": [
@@ -1079,14 +1079,14 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#전치 연산 (transpose)\n",
-    "#.T\n",
+    "#.T                    -> 메서드가 아닌 속성\n",
     "#행과 열을 바꿈\n",
     "\n",
     "A = np.array([[1,2,3],[4,5,6]])\n",
@@ -3164,7 +3164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 7,
    "id": "3492bc6e-befc-4c1a-969e-458bf4a9dfcc",
    "metadata": {},
    "outputs": [
@@ -3174,12 +3174,14 @@
        "0.56"
       ]
      },
-     "execution_count": 463,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#연습문제\n",
+    "\n",
     "#동전을 100번 던진 결과를 난수 발생 , 앞면:1 , 뒷면:0\n",
     "#이때 앞면이 나올 확률\n",
     "\n",
@@ -3190,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 6,
    "id": "84b5e993-3bf2-42d4-91a7-ac47337abcb1",
    "metadata": {},
    "outputs": [
@@ -3200,7 +3202,7 @@
        "3.42"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3210,7 +3212,7 @@
     "#그 숫자들의 평균\n",
     "\n",
     "np.random.seed(0)\n",
-    "a = np.random.randint(1,7,size=100)\n",
+    "a = np.random.randint(1,7,100)\n",
     "a.mean()"
    ]
   },
@@ -3284,8 +3286,625 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "c8ff5dea-7ac3-41c7-b89c-d8d3f0e81eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8, 10, 12],\n",
+       "       [14, 16, 18]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np1 = np.array([[1,2,3],[4,5,6]])\n",
+    "np2 = np.array([[7,8,9],[10,11,12]])\n",
+    "\n",
+    "np1+np2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c1e3671-1bf5-4133-b868-d32fc9dc3090",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  6,  9, 12, 15, 18, 21, 24, 27])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#연습문제 - \n",
+    "a  = np.arange(1,10)\n",
+    "a * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d02b17b2-f8cd-4a29-9078-a5cfa4de55f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#연습문제 \n",
+    "#5번째 숫자만 1\n",
+    "\n",
+    "a = np.zeros(10)\n",
+    "a[4] = 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "28bb3e76-90bd-40c4-bef8-58bb45b1000b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,\n",
+       "       32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,\n",
+       "       15, 14, 13, 12, 11, 10,  9,  8,  7,  6,  5,  4,  3,  2,  1,  0])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#연습문제\n",
+    "#역순\n",
+    "\n",
+    "b = np.arange(50)\n",
+    "b[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "47644807-db2e-4c9d-a534-1217cc99a9df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['', '', ''],\n",
+       "        ['', '', ''],\n",
+       "        ['', '', '']],\n",
+       "\n",
+       "       [['', '', ''],\n",
+       "        ['', '', ''],\n",
+       "        ['', '', '']],\n",
+       "\n",
+       "       [['', '', ''],\n",
+       "        ['', '', ''],\n",
+       "        ['', '', '']]], dtype='<U10')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#연습문제\n",
+    "#빈 문자열을 갖는 shape이 (3,3,3)이고 type이 U10인 배열 생성\n",
+    "\n",
+    "a = np.zeros((3,3,3),dtype = '<U10')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a7dd3f4f-899e-4a99-8cb4-92c71c67e5b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata']],\n",
+       "\n",
+       "       [['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata']],\n",
+       "\n",
+       "       [['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata'],\n",
+       "        ['playdata', 'playdata', 'playdata']]], dtype='<U8')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.full\n",
+    "#하나의 특정 값으로 배열을 채울때\n",
+    "\n",
+    "a = np.full((3,3,3),'playdata')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "0826e1f2-f1ce-45ae-950e-9827d44c9ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 2,  4,  6,  8, 10],\n",
+       "        [12, 14, 16, 18, 20]],\n",
+       "\n",
+       "       [[22, 24, 26, 28, 30],\n",
+       "        [32, 34, 36, 38, 40]]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(2,41,2).reshape(2,2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "f3bec757-5e70-42f3-a983-ccbf9b7a8315",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1]], dtype=int32)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#단위 행렬 (=항등행렬)\n",
+    "#주대각선의 원소가 모두 1이고 나머지는 모두 0인 정사각행렬\n",
+    "#np.eye(n)\n",
+    "\n",
+    "np.eye(4,dtype='i')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "d4a5310c-d314-4384-871a-6d03e2ea5460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True],\n",
+       "       [False,  True,  True],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#데이터 타입 변경\n",
+    "#astype(dtype='')  / dtype 필수\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "B = np.random.randint(0,2,9)\n",
+    "B.astype(dtype= 'bool').reshape(3,3)    #bool대신에 ? 사용가능\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "dc0f081f-3c06-4ea5-950d-c9e61e0dc32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7, 6, 5, 4, 6, 4, 8, 9, 3])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "f = np.random.rand(10) * 10 \n",
+    "f.astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "2ec1685e-df8f-4569-9f94-a9e7ffda8229",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = np.ones((10,10))\n",
+    "f[1:-1,1:-1] = 0\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "65492a3a-8f86-4ab7-bf60-33a80d28c78d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = np.ones((10,10))\n",
+    "f[:,[0,-1]]=0\n",
+    "f[[0,-1],:]=0\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "d22ae2a5-42e2-4567-be57-24a226f07a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.]])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "z=np.ones((8,8))\n",
+    "z[1::2,::2] =0 \n",
+    "z[::2,1::2]=0\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "54982c18-6499-4226-b827-f9a246564064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.]])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tile(np.eye(2),(4,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "6fb0bce8-b231-40d6-ad2a-1535c1a125a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3 -4 -5 -6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#boolean indexing\n",
+    "#같은 shape과 len의 boolean type의 값을 갖는 ndarray로 인덱싱\n",
+    "\n",
+    "v = np.arange(0,11)\n",
+    "neg = np.array([True if i>3 and i<7 else False for i in range(0,11)])\n",
+    "v[neg] = v[neg] * -1\n",
+    "v\n",
+    "\n",
+    "#강사님\n",
+    "a = np.arange(11)\n",
+    "a[(3<a) & (7>a)] *= -1\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "a88062bf-0f4b-45d0-bc24-5bf1ba867c70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1683"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#1부터 100까지의 3의 배수를 갖는 1차원 배열 생성 후 전체의 합\n",
+    "\n",
+    "a = np.arange(3,101,3)\n",
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "cd558176-dca1-46f5-97c0-650fc8bc23f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0.1,0.9,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aa57f2a7-dece-495c-b869-7ad79845663d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "로또 몇개 드릴까요? 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 8, 16, 23, 27, 36, 38]), array([10, 18, 19, 30, 37, 41])]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#로또 번호 생성기\n",
+    "#자연수 이외의 값을 입력하면 다시 입력대기\n",
+    "#로또 번호는 1차원의 ndarray의 형태로 오름차순 정렬\n",
+    "\n",
+    "while True :\n",
+    "    try: \n",
+    "        count = int(input('로또 몇개 드릴까요?'))\n",
+    "        if count <= 0:\n",
+    "            raise Error\n",
+    "        numbers = np.arange(1,46)\n",
+    "        lottos = [np.sort(np.random.choice(numbers,6,replace=False)) for _ in range(count)]\n",
+    "        display(lottos)\n",
+    "        break\n",
+    "    except:\n",
+    "        print('자연수만 입력해주세요.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8b748635-7d34-4f78-a672-0ec60c199309",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#서버의 응답시간 데이터\n",
+    "#200ms를 넘기는 값의 개수 \n",
+    "\n",
+    "resp_time = np. array([158,  85, 205,  24,  42, 175, 188, 149, 153, 171, 137,  55, 108,\n",
+    "                       199, 177, 209, 218,  76, 103, 189, 110, 192, 136, 119,   4, 102,\n",
+    "                       177, 212, 110,  37, 163,  32,  77,  22, 125, 184,  46, 139,  72,\n",
+    "                       168, 133, 209, 148,  47, 102,  65, 160,  56,  11,  96, 169, 118,\n",
+    "                        55, 135, 217,  49, 100,  85, 179,  15, 139, 199, 124, 142,  15,\n",
+    "                        49, 168, 171, 168, 177, 147,  23, 199,  26,  51,  42,  90, 128,\n",
+    "                       186, 169, 129,  70, 198, 111,  81, 150,  17, 177, 201,  10,  75,\n",
+    "                       199,  55, 151, 183, 152, 119, 193, 110, 204])\n",
+    "\n",
+    "\n",
+    "len(resp_time[resp_time > 200])\n",
+    "\n",
+    "#강사님\n",
+    "(resp_time > 200).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "cbe0a59a-fe7d-459c-b158-822c54247828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71.5\n",
+      "131.0\n",
+      "175.5\n",
+      "1분위(25%) 값 : 71.5ms\n",
+      "2분위(50%) 값 : 131.0ms\n",
+      "3분위(75%) 값 : 175.5ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "#사분위수 구하기\n",
+    "\n",
+    "print(np.percentile(resp_time,25))\n",
+    "print(np.percentile(resp_time,50))\n",
+    "print(np.percentile(resp_time,75))\n",
+    "\n",
+    "#강사님\n",
+    "for i,v in enumerate(range(25,76,25)):\n",
+    "    print(f'{i+1}분위({v}%) 값 : {np.percentile(resp_time,v)}ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "496be5a4-375a-42e1-b4f2-d6537a5c1558",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "뽀로로가 81표로 반장으로 선출되었습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = [\"뽀로로\", \"루피\", \"크롱\"]\n",
+    "result = np.array([2, 1, 2, 2, 2, 2, 0, 2, 1, 1, 0, 0, 2, 0, 0, 1, 1, 2, 2, 2, 1, 1,\n",
+    "                   1, 2, 0, 2, 2, 0, 1, 1, 0, 2, 1, 0, 1, 2, 0, 0, 1, 0, 1, 1, 1, 2,\n",
+    "                   1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 2, 0, 2, 2, 0, 0, 1, 1, 1, 0, 0, 2,\n",
+    "                   2, 1, 0, 1, 2, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0, 1, 2, 1, 1, 2, 0,\n",
+    "                   2, 0, 0, 0, 0, 2, 1, 2, 0, 2, 0, 0, 1, 0, 1, 2, 1, 2, 0, 2, 2, 1,\n",
+    "                   2, 0, 0, 1, 1, 0, 1, 2, 1, 2, 0, 2, 2, 2, 2, 0, 2, 2, 0, 2, 0, 2,\n",
+    "                   1, 1, 2, 1, 1, 0, 0, 1, 0, 0, 0, 2, 2, 0, 2, 0, 0, 0, 2, 0, 0, 0,\n",
+    "                   2, 0, 1, 2, 1, 0, 2, 0, 0, 1, 2, 1, 1, 2, 2, 0, 0, 0, 0, 2, 2, 1,\n",
+    "                   0, 1, 1, 2, 2, 1, 0, 0, 2, 0, 0, 0, 2, 0, 2, 2, 0, 2, 1, 0, 0, 2,\n",
+    "                   0, 1])\n",
+    "\n",
+    "count = np.bincount(result,minlength=3)\n",
+    "winner_index =count.argmax()\n",
+    "print(f'{p[winner_index]}가 {count[winner_index]}표로 반장으로 선출되었습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a524c3d8-9f6b-46b2-b002-e1296df3f008",
+   "id": "b818b85b-462a-45db-a94b-0f2053620667",
    "metadata": {},
    "outputs": [],
    "source": []
