--- a/14Numpy.ipynb
+++ b/14Numpy.ipynb
@@ -3761,7 +3761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "aa57f2a7-dece-495c-b869-7ad79845663d",
    "metadata": {},
    "outputs": [
@@ -3769,13 +3769,22 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "로또 몇개 드릴까요? 2\n"
+      "로또 몇개 드릴까요? 10\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 8, 16, 23, 27, 36, 38]), array([10, 18, 19, 30, 37, 41])]"
+       "[array([12, 14, 15, 20, 24, 45]),\n",
+       " array([25, 31, 37, 40, 44, 45]),\n",
+       " array([11, 13, 20, 24, 25, 32]),\n",
+       " array([ 2,  3, 19, 24, 41, 42]),\n",
+       " array([ 4, 18, 25, 27, 37, 41]),\n",
+       " array([ 1,  2,  7,  8, 30, 33]),\n",
+       " array([ 2, 18, 23, 25, 27, 42]),\n",
+       " array([20, 31, 37, 38, 44, 45]),\n",
+       " array([ 3, 12, 14, 18, 19, 34]),\n",
+       " array([ 1,  4,  9, 15, 21, 36])]"
       ]
      },
      "metadata": {},
