--- a/15Pandas1.ipynb
+++ b/15Pandas1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "091c0e57-00df-48f8-b4e8-0d7f15a88659",
    "metadata": {},
    "outputs": [],
@@ -270,6 +270,33 @@
     "test.name = '사회점수'\n",
     "test.index.name = '이름'\n",
     "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6f7d456d-e43d-4c7a-8126-53c1f6e2b2c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "철수     88\n",
+       "영희     95\n",
+       "길동    100\n",
+       "몽룡     67\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d= {'철수':88,'영희':95,'길동':100,'몽룡':67}\n",
+    "d\n",
+    "pd.Series(d)"
    ]
   },
   {
@@ -1895,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "f071138c-cdab-4c95-928f-ddf4d32d0f0e",
    "metadata": {},
    "outputs": [
@@ -1962,7 +1989,7 @@
        "방자  30  40  70"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "dc25cdae-7a1e-4f23-8a3d-096df208ae8d",
    "metadata": {},
    "outputs": [
@@ -2152,7 +2179,7 @@
        "방자  30  40  70  46.67"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
