--- a/mini_project/01mini_project.ipynb
+++ b/mini_project/01mini_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "4d6fc2c2-1ce4-4918-b3b2-348ce61a5fef",
    "metadata": {},
    "outputs": [],
@@ -39,15 +39,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
+   "id": "c4350d6c-b5c1-4f1f-83d7-99037e285194",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\python\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd C:\\\\python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "6008756e-38ba-4176-b289-70b07bb31a47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "국도          17502\n",
+       "고속국도(재정)     1866\n",
+       "지방도          1230\n",
+       "시도            665\n",
+       "고속국도(민자)       76\n",
+       "군도             51\n",
+       "특별광역시도          4\n",
+       "국유임도            2\n",
+       "이도              1\n",
+       "Name: 도로유형, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#야생동물별 로드킬 발생장소 데이터 \n",
     "\n",
-    "road_kill_species = pd.read_csv('datas/국립생태원_로드킬 정보시스템 로드킬 신고 현황_20191231.csv',encoding='cp949')\n",
-    "road_kill_species.to_csv('mini_project/road_kill_species.csv')"
+    "road_kill_species = pd.read_csv('mini_project/road_kill_species.csv')\n",
+    "#road_kill_species.to_csv('mini_project/road_kill_species.csv')\n",
+    "\n",
+    "road_kill_species.도로유형.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7485116f-2045-4ea1-9780-4ace8e722f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "국도          17502\n",
+       "고속국도(재정)     1866\n",
+       "지방도          1230\n",
+       "시도            665\n",
+       "고속국도(민자)       76\n",
+       "군도             51\n",
+       "특별광역시도          4\n",
+       "국유임도            2\n",
+       "이도              1\n",
+       "Name: 도로유형, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "road_kill_species.도로유형.value_counts()"
    ]
   },
   {
